--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "escolapp",
+  "name": "react-typescript-redux-saga",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +7,17 @@
     "@types/node": "12.0.2",
     "@types/react": "16.8.18",
     "@types/react-dom": "16.8.4",
+    "axios": "^0.18.0",
     "firebase": "^6.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
+    "typesafe-actions": "^4.4.0",
     "typescript": "3.4.5"
   },
   "scripts": {
@@ -37,10 +42,13 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.0.9",
+    "@types/redux-saga": "^0.10.5",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
+    "eslint-config-react-app": "^4.0.1",
     "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
